# todo-cpp

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
client/: package-lock.json  package.json
client/src/: App.js  i18n.js
client/src/auth/: login.css  login.js
client/src/lang/: en.json  fr.json
client/src/login/: login.js
server/: CMakeLists.txt  setup.bat
server/source/: CMakeLists.txt
server/source/Cards/: Card.hpp
server/source/Database/: IDatabase.hpp  MySQL.SQL  MySQL.cpp  MySQL.hpp
server/source/Labels/: ILabel.cpp  Label.cpp  Label.hpp
server/source/Network/: HTTP.cpp  HTTP.hpp  INetwork.cpp  INetwork.hpp
server/source/Tools/: tool-string.cpp  tool-string.hpp
todo-cpp/: CMakeLists.txt  todo-cpp.cpp
todo-cpp/Cards/: Card.cpp  ICard.cpp  ICard.hpp
todo-cpp/Labels/: ILabel.cpp  ILabel.hpp
todo-cpp/Lists/: IList.cpp  IList.hpp  List.cpp  List.hpp
todo-cpp/Tools/: tool-string.cpp  tool-string.hpp
